--- a/Report/assignment report.tex
+++ b/Report/assignment report.tex
@@ -340,17 +340,15 @@ From the option price estimate for different strike prices, we do not observe an
 
 This trend in the variance of the estimated values is more evidenced in the measurements of standard errors, which effectively decreased from smaller values of $N$ to larger values within the same strike price. Each time when $N$ increased by $10$ times, the value of standard errors is lowered to approximately between $\dfrac{1}{4}$ to $\dfrac{1}{3}$ of the previous value, which is similar to the value of $\dfrac{1}{\sqrt{10}}$.
 
-
 \subsection{Variance Control and Effectiveness}
+We choose the average of the digital call option values on these three assets as a control variate.
 \subsubsection{Algorithm}
 \begin{itemize}
 	\item \textbf{Inputs:} $S_0$, $X$, $r$, $q$, $T$, $\sigma$, $C$, $N$
 	\item \textbf{Output:} $\texttt{MC\_CV}$, Option Premium
 	\item \textbf{Initiation: }\\ \vspace{1mm}
-	$F_1 = \texttt{BS\_DigitalCall}(S_0^1, X, r, q_1, T, \sigma_1)$; \\ \vspace{1mm}
-	$F_2 = \texttt{BS\_DigitalCall}(S_0^2, X, r, q_2, T, \sigma_2)$; \\ \vspace{1mm}
-	$F_3 = \texttt{BS\_DigitalCall}(S_0^3, X, r, q_3, T, \sigma_3)$; \\ \vspace{1mm}
-	$\bar{F} = \dfrac{F_1+F_2+F_3}{3}$
+	$F_i = \texttt{BS\_DigitalCall}(S_0^i, X, r, q_i, T, \sigma_i) \, \forall i = 1,2,3$; \\ \vspace{1mm}
+	$\bar{F} = \dfrac{F_1+F_2+F_3}{3}$ is the expected value of the control variate
 	
 	\item Pilot simulation using the same Monte Carlo simulation method but for only $\dfrac{1}{5}$ of original sample size, to obtain $\beta$. The results of interest are:
 	\begin{itemize}
@@ -407,7 +405,7 @@ Using the set of parameters and the control variate algorithm, with the number o
 Using Monte Carlo simulation with control variate, we obtained results whose trends are to the previous runs with same set of parameters and without control variate. The similarity is in terms of:
 \begin{itemize}
 	\item Option premium converges with less variation as $N$ increases;
-	\item The option premium decreases with increase in $X$; 
+	\item The option premium decreases with increase in $X$ because of ; 
 	\item The standard error of the results decreases for increase in $N$ within the same $X$. 
 \end{itemize}
 
@@ -450,6 +448,6 @@ From observation, the $\rho$, the estimated correlation coefficient between  the
 	\end{tabular}
 \end{center}
 
-According to the lecture notes, the theoretical value of the standard error after control variate is applied would be reduced to $\sqrt{1-\rho^2}$ of that of the original values obtained without using control variate. From the data of standard errors before and after applying control variate, we could see the ratio of after-control-variate values to the original values for the same strike price, are clustering around the theoretical percentage predicted using the values of $\sqrt{1-\rho^2}$
+According to the lecture notes, the theoretical value of the standard error after control variate is applied would be reduced to $\sqrt{1-\rho^2}$ of that of the original values obtained without using control variate. From the data of standard errors before and after applying control variate, we could see the ratio of after-control-variate values to the original values for the same strike price, are clustering around the theoretical percentage predicted.
 
 \end{document}
